# bazel-packaging-demo

./: .gitignore  BUILD.bazel  BUILD.pprof  BUILD.skicka  README.md  WORKSPACE  pprof_repos.bzl  skicka_repos.bzl
