# Copyright 2020 Yoshi Yamaguchi
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_pkg//:pkg.bzl", "pkg_tar", "pkg_deb")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/ymotongpoo/bazel-packaging-demo
gazelle(name = "gazelle")

exports_files([
    "LICENSE",
    "pprof.patch",
])

MAINTAINER = "Yoshi Yamaguchi <@ymotongpoo>"

############################
# github.com/google/skicka
############################

pkg_tar(
    name = "skicka-bin",
    package_dir = "/usr/local/bin",
    srcs = ["@com_github_google_skicka//:skicka"],
    mode = "0755",
)

pkg_tar(
    name = "skicka-data",
    extension = "tar.gz",
    deps = [
        ":skicka-bin",
    ],
)

pkg_deb(
    name = "skicka-deb",
    package = "skicka",
    description = "Command-line utility for working with Google Drive.",
    architecture = "amd64",
    data = ":skicka-data",
    maintainer = MAINTAINER,
    homepage = "https://github.com/google/skicka",
    version = "20190419",
)

############################
# github.com/google/pprof
############################

pkg_tar(
    name = "pprof-bin",
    package_dir = "/usr/local/bin",
    srcs = ["@com_github_google_pprof//:pprof"],
    mode = "0755",
)

pkg_tar(
    name = "pprof-data",
    extension = "tar.gz",
    deps = [
        ":pprof-bin",
    ],
)

pkg_deb(
    name = "pprof-deb",
    package = "pprof",
    description = "pprof is a tool for visualization and analysis of profiling data.",
    architecture = "amd64",
    data = ":pprof-data",
    maintainer = MAINTAINER,
    homepage = "https://github.com/google/pprof",
    version = "20200430",
)
